external-crates/move/crates/move-compiler/tests/move_check/expansion/use_spec_function_as_normal_function.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:3:5
  │
3 │     spec module {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:3:17
  │
3 │     spec module {
  │                 ^
  │                 │
  │                 Unexpected '{'
  │                 Expected an address or an identifier

error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:9:8
  │
9 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E03002]: unbound module
   ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:10:9
   │
10 │     use 0x2::X::{foo, bar as baz};
   │         ^^^^^^ Invalid 'use'. Unbound module: '0x2::X'

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:12:9
   │
12 │         foo();
   │         ^^^ Unbound function 'foo' in current scope

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:13:9
   │
13 │         baz();
   │         ^^^ Unbound function 'baz' in current scope

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:17:1
   │
17 │ }
   │ ^ Invalid code unit. Expected 'address' or 'module'. Got '}'

